# Image-gallery

./: package-lock.json  package.json
src/: App.tsx  ImageGallery.css  ImageGallery.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  test.rs
src-tauri/src/db/: db.rs  image.rs  mod.rs  models.rs  utils.rs
src-tauri/src/models/: image.rs  mod.rs
src-tauri/src/thumbnailer/: mod.rs  model.rs  models.rs  thumbnailer.rs  utils.rs
