[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"              # 用于解析 URL
fast_image_resize = { version = "5", features = ["image"] }
image = "0.25"         # 用于图片处理
tokio = { version = "1", features = ["full"] }
ipc-channel = { version = "0.20", features = [] }

#　mime_guess = "2"       # 猜测文件的 MIME 类型
#　glob = "0.3"           # 用于查找文件 (演示用)
