[package]
name = "image-gallery"
version = "0.1.0"
description = "A Tauri App"
authors = ["XH"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "image_gallery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
image = "0.25"
tokio = { version = "1", features = ["full"] }
ipc-channel = { version = "0.20", features = [] }
once_cell = { version = "1.21.3", features = ["parking_lot"] }
tauri-plugin-shell = "2.3.3"
slotmap = { version = "1", features = ["serde"] }
percent-encoding = "2"
#　mime_guess = "2"       # 猜测文件的 MIME 类型
#　glob = "0.3"           # 用于查找文件 (演示用)
